Change the project name, enginepp -> nextfloor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.12)
-project(engine)
+project(nextfloor)
 
 
 # pick a version #
-set(engine_VERSION 0.1)
+set(nextfloor_VERSION 0.2)
 
 include_directories(src)
 set (CMAKE_CXX_STANDARD 14)
@@ -12,76 +12,76 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 set(graphics_SRCS
-    src/engine/graphics/shape3d.cc
-    src/engine/graphics/quad.cc
-    src/engine/graphics/cube.cc
-    src/engine/graphics/border.cc)
+    src/nextfloor/graphics/shape3d.cc
+    src/nextfloor/graphics/quad.cc
+    src/nextfloor/graphics/cube.cc
+    src/nextfloor/graphics/border.cc)
 
 set(core_SRCS
-    src/engine/core/config_engine.cc)
+    src/nextfloor/core/config_engine.cc)
 
 set(renderer_SRCS
-    src/engine/renderer/loopgl.cc)
+    src/nextfloor/renderer/loopgl.cc)
 
 set(physics_SRCS
-    src/engine/physics/collision_engine.cc
-    src/engine/physics/cl_collision_engine.cc
-    src/engine/physics/cilk_collision_engine.cc
-    src/engine/physics/serial_collision_engine.cc)
+    src/nextfloor/physics/collision_engine.cc
+    src/nextfloor/physics/cl_collision_engine.cc
+    src/nextfloor/physics/cilk_collision_engine.cc
+    src/nextfloor/physics/serial_collision_engine.cc)
 
 set(universe_SRCS
-    src/engine/universe/random_universe_factory.cc
-    src/engine/universe/camera.cc
-    src/engine/universe/model3d.cc
-    src/engine/universe/wall.cc
-    src/engine/universe/brick.cc
-    src/engine/universe/room.cc
-    src/engine/universe/universe.cc)
+    src/nextfloor/universe/random_universe_factory.cc
+    src/nextfloor/universe/camera.cc
+    src/nextfloor/universe/model3d.cc
+    src/nextfloor/universe/wall.cc
+    src/nextfloor/universe/brick.cc
+    src/nextfloor/universe/room.cc
+    src/nextfloor/universe/universe.cc)
 
-set(engine_SRCS
+set(nextfloor_SRCS
     ${graphics_SRCS}
     ${core_SRCS}
     ${renderer_SRCS}
     ${physics_SRCS}
     ${universe_SRCS}
-    src/engine.cc)
+    src/nextfloor.cc)
 
 set(graphics_HDRS
-    src/engine/graphics/shape3d.h
-    src/engine/graphics/quad.h
-    src/engine/graphics/cube.h
-    src/engine/graphics/border.h)
+    src/nextfloor/graphics/shape3d.h
+    src/nextfloor/graphics/quad.h
+    src/nextfloor/graphics/cube.h
+    src/nextfloor/graphics/border.h)
 
 set(core_HDRS
-    src/engine/core/config_engine.h)
+    src/nextfloor/core/config_engine.h)
 
 set(renderer_HDRS
-    src/engine/renderer/loopgl.h)
+    src/nextfloor/renderer/loopgl.h)
 
 set(physics_HDRS
-    src/engine/physics/collision_engine.h
-    src/engine/physics/cl_collision_engine.h
-    src/engine/physics/cilk_collision_engine.h
-    src/engine/physics/serial_collision_engine.h)
+    src/nextfloor/physics/collision_engine.h
+    src/nextfloor/physics/cl_collision_engine.h
+    src/nextfloor/physics/cilk_collision_engine.h
+    src/nextfloor/physics/serial_collision_engine.h)
 
 set(universe_HDRS
-    src/engine/universe/random_universe_factory.h
-    src/engine/universe/universe_factory.h
-    src/engine/universe/camera.h
-    src/engine/universe/model3d.h
-    src/engine/universe/wall.h
-    src/engine/universe/brick.h
-    src/engine/universe/room.h
-    src/engine/universe/universe.h)
+    src/nextfloor/universe/random_universe_factory.h
+    src/nextfloor/universe/universe_factory.h
+    src/nextfloor/universe/camera.h
+    src/nextfloor/universe/model3d.h
+    src/nextfloor/universe/wall.h
+    src/nextfloor/universe/brick.h
+    src/nextfloor/universe/room.h
+    src/nextfloor/universe/universe.h)
 
-set(engine_HDRS
+set(nextfloor_HDRS
     ${graphics_HDRS}
     ${core_HDRS}
     ${renderer_HDRS}
     ${physics_HDRS}
     ${universe_HDRS})
 
-add_executable(engine ${engine_SRCS} ${engine_HDRS})
+add_executable(nextfloor ${nextfloor_SRCS} ${nextfloor_HDRS})
 
 find_package(Cilk REQUIRED)
 find_package(TBB REQUIRED)
@@ -92,4 +92,4 @@ find_package(GLEW REQUIRED)
 find_package(OpenCL REQUIRED)
 add_definitions("-fcilkplus -std=gnu++14 -stdlib=libc++")
 include_directories(${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${SOIL_INCLUDE_DIR} ${OpenCL_INCLUDE_DIRS} ${Config++_INCLUDE_DIRS})
-target_link_libraries(engine ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARY} SOIL glfw ${OpenCL_LIBRARY} config++ cilkrts tbb)
+target_link_libraries(nextfloor ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARY} SOIL glfw ${OpenCL_LIBRARY} config++ cilkrts tbb)
