Add an Input Handler System with Commands Class for Object Moves

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,12 @@ set (CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
+# Mojave issue
+IF(APPLE)
+    # Fix linking on 10.14+. See https://stackoverflow.com/questions/54068035
+    LINK_DIRECTORIES(/usr/local/lib)
+ENDIF()
+
 set(graphics_SRCS
     src/nextfloor/graphics/shape3d.cc
     src/nextfloor/graphics/quad.cc
@@ -17,10 +23,13 @@ set(graphics_SRCS
     src/nextfloor/graphics/border.cc)
 
 set(core_SRCS
-    src/nextfloor/core/config_engine.cc)
+    src/nextfloor/core/config_engine.cc
+    src/nextfloor/core/global_timer.cc)
 
-set(renderer_SRCS
-    src/nextfloor/renderer/loopgl.cc)
+set(hid_SRCS
+    src/nextfloor/hid/input_handler.cc
+    src/nextfloor/hid/keyboard_mouse.cc
+    src/nextfloor/hid/pad.cc)
 
 set(physics_SRCS
     src/nextfloor/physics/collision_engine.cc
@@ -28,22 +37,37 @@ set(physics_SRCS
     src/nextfloor/physics/tbb_collision_engine.cc
     src/nextfloor/physics/serial_collision_engine.cc)
 
+set(renderer_SRCS
+    src/nextfloor/renderer/loopgl.cc)
+
 set(universe_SRCS
-    src/nextfloor/universe/random_universe_factory.cc
-    src/nextfloor/universe/camera.cc
+    src/nextfloor/universe/commands/fire_command.cc
+    src/nextfloor/universe/commands/jump_command.cc
+    src/nextfloor/universe/commands/movedown_command.cc
+    src/nextfloor/universe/commands/moveleft_command.cc
+    src/nextfloor/universe/commands/moveright_command.cc
+    src/nextfloor/universe/commands/moveup_command.cc
+    src/nextfloor/universe/commands/run_command.cc
+    src/nextfloor/universe/dynamic/camera.cc
+    src/nextfloor/universe/dynamic/brick.cc
+    src/nextfloor/universe/factory/random_universe_factory.cc
+    src/nextfloor/universe/stationary/wall.cc
     src/nextfloor/universe/model3d.cc
-    src/nextfloor/universe/wall.cc
-    src/nextfloor/universe/brick.cc
     src/nextfloor/universe/room.cc
     src/nextfloor/universe/universe.cc)
 
 set(nextfloor_SRCS
     ${graphics_SRCS}
     ${core_SRCS}
+    ${hid_SRCS}
     ${renderer_SRCS}
     ${physics_SRCS}
     ${universe_SRCS}
     src/nextfloor.cc)
+
+set(core_HDRS
+    src/nextfloor/core/config_engine.h
+    src/nextfloor/core/global_timer.h)
 
 set(graphics_HDRS
     src/nextfloor/graphics/shape3d.h
@@ -51,11 +75,11 @@ set(graphics_HDRS
     src/nextfloor/graphics/cube.h
     src/nextfloor/graphics/border.h)
 
-set(core_HDRS
-    src/nextfloor/core/config_engine.h)
-
-set(renderer_HDRS
-    src/nextfloor/renderer/loopgl.h)
+set(hid_HDRS
+    src/nextfloor/hid/hid.h
+    src/nextfloor/hid/input_handler.h
+    src/nextfloor/hid/keyboard_mouse.h
+    src/nextfloor/hid/pad.h)
 
 set(physics_HDRS
     src/nextfloor/physics/collision_engine.h
@@ -63,19 +87,31 @@ set(physics_HDRS
     src/nextfloor/physics/tbb_collision_engine.h
     src/nextfloor/physics/serial_collision_engine.h)
 
+set(renderer_HDRS
+    src/nextfloor/renderer/loopgl.h)
+
 set(universe_HDRS
-    src/nextfloor/universe/random_universe_factory.h
-    src/nextfloor/universe/universe_factory.h
-    src/nextfloor/universe/camera.h
+    src/nextfloor/universe/commands/command.h
+    src/nextfloor/universe/commands/fire_command.h
+    src/nextfloor/universe/commands/jump_command.h
+    src/nextfloor/universe/commands/movedown_command.h
+    src/nextfloor/universe/commands/moveleft_command.h
+    src/nextfloor/universe/commands/moveright_command.h
+    src/nextfloor/universe/commands/moveup_command.h
+    src/nextfloor/universe/commands/run_command.h
+    src/nextfloor/universe/factory/random_universe_factory.h
+    src/nextfloor/universe/factory/universe_factory.h
+    src/nextfloor/universe/dynamic/camera.h
+    src/nextfloor/universe/dynamic/brick.h
+    src/nextfloor/universe/stationary/wall.h
     src/nextfloor/universe/model3d.h
-    src/nextfloor/universe/wall.h
-    src/nextfloor/universe/brick.h
     src/nextfloor/universe/room.h
     src/nextfloor/universe/universe.h)
 
 set(nextfloor_HDRS
     ${graphics_HDRS}
     ${core_HDRS}
+    ${hid_HDRS}
     ${renderer_HDRS}
     ${physics_HDRS}
     ${universe_HDRS})
@@ -88,6 +124,7 @@ find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenCL REQUIRED)
+find_library(SOIL REQUIRED)
 add_definitions("-std=gnu++17")
 include_directories(${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${SOIL_INCLUDE_DIR} ${OpenCL_INCLUDE_DIRS} ${Config++_INCLUDE_DIRS})
 target_link_libraries(nextfloor ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARY} SOIL glfw ${OpenCL_LIBRARY} config++ tbb)
