--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,7 +155,7 @@ find_package(glfw3 REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenCL REQUIRED)
 find_library(SOIL REQUIRED)
-add_definitions("-std=gnu++17 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic")
+add_definitions("-std=gnu++17 -Wall")
 include_directories(${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${SOIL_INCLUDE_DIR} ${OpenCL_INCLUDE_DIRS} ${Config++_INCLUDE_DIRS})
 target_link_libraries(nextfloor ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARY} SOIL glfw ${OpenCL_LIBRARY} config++ tbb)
 target_compile_features(nextfloor PUBLIC cxx_nullptr)
